Added git clone cmd

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
       - echo Installing source NPM dependencies...
       - npm install
       - npm install unit.js
+      - git clone https://github.com/dushyant8858/aws-nodejs-sample-codebuild.git
   build:
     commands:
       - echo Build started on `date`
