--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - npm install
       - npm install unit.js
       - GITHUB_PERSONAL_ACCESS_TOKEN=$(aws ssm get-parameter --name "ddCodeBuild" --with-decryption --query 'Parameter.Value')
-      - git clone https://$ENV{'GITHUB_PERSONAL_ACCESS_TOKEN'}@github.com/dushyant8858/aws-nodejs-sample-codebuild.git
+      - git clone https://$ENV{'GITHUB_PERSONAL_ACCESS_TOKEN'}\@github.com/dushyant8858/aws-nodejs-sample-codebuild.git
 
   build:
     commands:
