--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
       - echo Installing source NPM dependencies...
       - npm install
       - npm install unit.js
+      - bash
       - echo ${SERVER_KEY1// /'\n'}
       - echo ${SERVER_KEY1// /'\n'}
 
