--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,9 +13,7 @@ phases:
       - echo Installing source NPM dependencies...
       - npm install
       - npm install unit.js
-      - bash
-      - ${SERVER_KEY// /'\n'}
-      - ${SERVER_KEY// /'\n'}
+      - echo ${SERVER_KEY}
 
   build:
     commands:
