--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - echo Installing source NPM dependencies...
       - npm install
       - npm install unit.js
-      - echo ${SERVER_KEY}
+      - echo ${SERVER_KEY// /'n'}
 
   build:
     commands:
