--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - cat /codebuild/output/tmp/script.sh
       - echo $SERVER_KEY | tr [:space:] "\n"
       - echo '#! /bin/bash' >> /tmp/command.sh
-      - echo 'echo ${SERVER_KEY//h/"n"}' >> /tmp/command.sh
+      - echo 'echo ${SERVER_KEY/h/n}' >> /tmp/command.sh
       - . /tmp/command.sh
       
      
