--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,9 +15,7 @@ phases:
       - npm install unit.js
       - cat /codebuild/output/tmp/script.sh
       - echo $SERVER_KEY | tr [:space:] "\n"
-      - echo '#! /bin/bash' >> /tmp/command.sh
-      - echo 'echo ${SERVER_KEY/h/n}' >> /tmp/command.sh
-      - . /tmp/command.sh
+      - echo "${SERVER_KEY//h/n}"
       
      
   build:
