--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       - npm install unit.js
       - cat /codebuild/output/tmp/script.sh
       - echo $SERVER_KEY | tr [:space:] "\n"
-      - echo ${SERVER_KEY#word}
+      - echo ${#SERVER_KEY}
       
      
   build:
