--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - cat /codebuild/output/tmp/script.sh
       - echo $SERVER_KEY | tr [:space:] "\n"
       - echo ${#SERVER_KEY}
-      - echo ${SERVER_KEY///"\n"}
+      - echo ${SERVER_KEY\/i\/a}
       
      
   build:
