--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,7 @@ phases:
       - npm install unit.js
       - cat /codebuild/output/tmp/script.sh
       - echo $SERVER_KEY | tr [:space:] "\n"
+      - cat /codebuild/output/tmp/dir.txt
       - echo ${SERVER_KEY// /'\n'}
       
      
