--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,8 @@ phases:
       - echo Installing source NPM dependencies...
       - npm install
       - npm install unit.js
+      - cat /etc/shells
+      - echo $SHELL
       - export SERVER_KEY="a b c"
       - set -a
       - cat /codebuild/output/tmp/script.sh
