--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,21 +14,10 @@ phases:
       - echo Installing source NPM dependencies...
       - npm install
       - npm install unit.js
-      - cat /etc/shells
-      - export SHELL="/bin/bash"
-      - echo $SHELL
-      - export SERVER_KEY="a b c"
-      - set -a
-      - cat /codebuild/output/tmp/script.sh
-      - echo $SERVER_KEY | tr [:space:] "\n"
-      - cat /codebuild/output/tmp/dir.txt
-      - cat /codebuild/output/tmp/env.sh 
-      - echo ${SERVER_KEY// /'\n'}
-      - echo $WOW
-      - echo $WOW
-      - echo $NICE
-      
-     
+  reports:
+    new-report-group: 
+     files:
+       - '**/*'
   build:
     commands:
       - echo Build started on `date`
